clean up the span normalizer